# loan-analyzer

./: Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yaml
loan_analyzer/: AutoLoan.py  Dollar.py  Loan.py  balance_tracker.py  dollar.py  loan_analyzer_cli.py  mortgage.py
src/loan_utils/: auto_loan.py  balance_tracker.py  calendar.py  dollar.py  loan.py  loan_analyzer_cli.py  mortgage.py  rate.py
tests/: test_dollar.py
