[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "loan-analyzer"
version = "0.1.0"
description = "A simple loan analyzer for home, auto, and personal loans."
authors = [
    { name="Jason Magno", email="jason.i.magno@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
dependencies = []

[project.scripts]
loan_analyzer_cli = "loan_utils.loan_analyzer_cli:main"

[tool.setuptools.packages.find]
where = ["src"]
